duihome (0.21.0~13) unstable; urgency=low
  * Fixes: NB#159568 - Switcher thumbnails content doesn't display how the app
    really looks like.
  * Fixes: NB#162716 - Missing close applet space icon
  * Fixed launcher panning in portrait mode
  * Fixed example image applet
  * Adapted to libdui 0.20.0 API changes and renaming libdui to libmeegotouch
  * Moved the functional tests and benchmarks to a separate repository
  * Removed TESTABILITY ifdefs from launcher and quicklauncher
	
 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 01 Apr 2010 15:52:01 +0200

duihome (0.20.2-1) unstable; urgency=low

  * Close the launcher when a launcher button is clicked

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 23 Mar 2010 18:40:53 +0200

duihome (0.20.1-1) unstable; urgency=low

  * Use the correct icon ID for the launcher button
  * Fixes: NB#161282 -duihome's window type is TYPE_NORMAL instead of TYPE_DESKTOP

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 23 Mar 2010 16:32:30 +0200

duihome (0.20.0-1) unstable; urgency=low

  * New version
  * Implemented: SWP#DUI-1949 Launcher layout & navigation
  * Implemented: SWP#DUI-1944 Notification plugin in Status Indicator Menu

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 23 Mar 2010 15:27:36 +0200

duihome (0.19.3-1) unstable; urgency=low

  * New version
  * Implemented: SWP#DUI-2397 Quick Launch Bar

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 16 Mar 2010 11:53:55 +0200

duihome (0.19.2-1) unstable; urgency=low

  * New version
  * Implemented: SWP#DUI-2011 Switcher overview

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue,  2 Mar 2010 13:01:35 +0200

duihome (0.19.1-1) unstable; urgency=low

  * New version
  * Fixes: Installed applications were not shown in the Launcher when compiled with testability enabled

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 25 Feb 2010 14:24:01 +0200

duihome (0.19.0-1) unstable; urgency=low

  * New version